--- a/package.json
+++ b/package.json
@@ -13,8 +13,19 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.2",
     "jest": "^27.1.0",
+    "lint-staged": "^11.2.0",
+    "prettier": "^2.4.1",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
   }
