--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "stripInternal": true,
-    "types": [],
+    "types": ["node"],
     "paths": {
       "@Lib/*": ["./src/*"]
     },
