--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.10.3",
     "@types/ramda": "^0.27.45",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
@@ -31,5 +32,8 @@
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2"
   }
 }
