--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.16.0",
     "@types/jest": "^27.0.1",
+    "@types/lodash-es": "^4.17.5",
     "@types/node": "^16.10.3",
     "@types/ramda": "^0.27.45",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "babel-jest": "^27.3.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -35,6 +38,7 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "uuid": "^8.3.2"
   }
 }
