--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "stripInternal": true,
+    "allowJs": true,
     "types": ["node"],
     "paths": {
       "@Lib/*": ["./src/*"]
