replace lodash-es with lodash.isequal and enable esModuleInterop flag

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "stripInternal": true,
+    "esModuleInterop": true,
     "allowJs": true,
     "types": ["node"],
     "paths": {
