--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.16.0",
     "@types/jest": "^27.0.1",
     "@types/lodash-es": "^4.17.5",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/node": "^16.10.3",
     "@types/ramda": "^0.27.45",
     "@types/uuid": "^8.3.1",
@@ -38,7 +39,7 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
-    "lodash-es": "^4.17.21",
+    "lodash.isequal": "^4.5.0",
     "uuid": "^8.3.2"
   }
 }
