--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "csp-cafe",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
     "lint": "eslint --ext .ts --ignore-path .gitignore  -- .",
     "prepare": "npm run build"
   },
+  "files": ["./dist/**/*"],
   "keywords": [],
   "author": "",
   "license": "ISC",
