--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "csp-cafe",
-  "version": "1.0.2",
+  "version": "1.0.7",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "jest",
     "test:clear": "jest --clearCache",
@@ -12,8 +11,10 @@
     "lint": "eslint --ext .ts --ignore-path .gitignore  -- .",
     "prepare": "npm run build"
   },
-  "files": ["./dist/**/*"],
   "keywords": [],
+  "files": [
+    "dist"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -22,7 +23,6 @@
     "@types/lodash-es": "^4.17.5",
     "@types/lodash.isequal": "^4.5.5",
     "@types/node": "^16.10.3",
-    "@types/ramda": "^0.27.45",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
