--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "csp-cafe",
-  "version": "1.0.7",
+  "version": "1.0.0",
   "description": "",
   "scripts": {
     "test": "jest",
     "test:clear": "jest --clearCache",
     "test:watch": "jest --watchAll",
-    "build": "tsc --build",
+    "build": "tsc --build && npm run copy-package-json && tscpaths -p tsconfig.json -s ./src -o ./dist",
+    "copy-package-json": "copyfiles ./package.json ./tsconfig.json dist",
     "start:examples": "ts-node -r tsconfig-paths/register examples/fastFoodRestaurant/index.ts",
-    "lint": "eslint --ext .ts --ignore-path .gitignore  -- .",
-    "prepare": "npm run build"
+    "lint": "eslint --ext .ts --ignore-path .gitignore  -- ."
   },
   "keywords": [],
   "files": [
-    "dist"
+    "dist/src"
   ],
   "author": "",
   "license": "ISC",
@@ -27,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "babel-jest": "^27.3.1",
+    "copyfiles": "2.4.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -36,8 +37,10 @@
     "jest": "^27.1.0",
     "lint-staged": "^11.2.0",
     "prettier": "^2.4.1",
+    "rimraf": "3.0.2",
     "ts-jest": "^27.0.7",
     "tsconfig-paths": "^3.12.0",
+    "tscpaths": "0.0.9",
     "typescript": "^4.4.2"
   },
   "dependencies": {
