--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,11 @@
     "target": "ES2018",
     "lib": ["esnext.asynciterable"],
     "module": "commonjs",
+    "moduleResolution": "node",
     "declaration": true,
     "outDir": "dist",
     "baseUrl": ".",
-    "rootDir": "src",
+    "rootDir": "./src",
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -21,5 +22,5 @@
     },
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"]
+  "include": ["./src"]
 }
